tests/baselines/reference/nullishCoalescingOperator3.errors.txt
nullishCoalescingOperator3.ts(9,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | boolean | 0 | 1' or 'boolean | "" | 0 | "literal" | 1 | "whatever"'.


==== nullishCoalescingOperator3.ts (1 errors) ====
    declare const a1: 'literal' | undefined | null
    declare const a2: '' | undefined | null
    declare const a3: 1 | undefined | null
    declare const a4: 0 | undefined | null
    declare const a5: true | undefined | null
    declare const a6: false | undefined | null
    
    
    const aa1 = a1 ?? a2 ?? a3 ?? a4 ?? a5 ?? a6 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | boolean | 0 | 1' or 'boolean | "" | 0 | "literal" | 1 | "whatever"'.
    